bug fixed: no grid styles on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -564,7 +564,8 @@ button {
 
 .contact-form label{
   width: 100%;
-  margin-bottom: 12px;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
   font-size: 11px;
   font-weight: 700;
   color: $blue;
@@ -576,7 +577,8 @@ button {
   width: 100%;
   border: 0;
   border-bottom: 1px solid $blue;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
+  margin-top: 1rem;
 }
 
 .checkbox-div{
@@ -603,14 +605,15 @@ button {
   line-height: 16px;
 }
 
+.container-button{
+  text-align: right;
+}
+
 .form-button{
   cursor: pointer;
   margin-top: 1rem;
   background-color: $blue;
   color: white;
-  position: relative;
-  margin-left: auto;
-  margin-right: 0;
   width: 60%;
   max-width: 225px;
   transform: scale(1.05);
